--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 BOT_TOKEN=7513501484:AAEwUxe-HKU8KDQ4AtfY0m3UXbANokGsdk4
 ADMIN_ID=7473008936
-CHANNELS=@stockode_learning,@stockode.official
+CHANNELS=@stockode_learning,@stockodeofficial
