--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 BOT_TOKEN=7513501484:AAEwUxe-HKU8KDQ4AtfY0m3UXbANokGsdk4
 ADMIN_ID=7473008936
 CHANNELS=@stockodeofficial
+WEBHOOK_URL=https://bot-3-x5xx.onrender.com/7513501484:AAEwUxe-HKU8KDQ4AtfY0m3UXbANokGsdk4
